--- a/index.html
+++ b/index.html
@@ -1,130 +1,82 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>EH1OY</title>
-    <style>
-        body {
-            margin: 0;
-            font-family: Arial, sans-serif;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            background: linear-gradient(135deg, #1a1a1a, #333);
-            color: white;
-            overflow: hidden;
-        }
-
-        .container {
-            text-align: center;
-            animation: fadeIn 2s ease-in-out;
-            padding: 1rem;
-        }
-
-        h1 {
-            font-size: 5rem;
-            margin-bottom: 2rem;
-            animation: bounce 2s infinite;
-        }
-
-        .buttons {
-            display: flex;
-            gap: 1rem;
-            justify-content: center;
-            flex-wrap: wrap;
-        }
-
-        .btn {
-            padding: 1rem 2rem;
-            font-size: 1.2rem;
-            font-weight: bold;
-            border-radius: 8px;
-            cursor: pointer;
-            text-decoration: none;
-            transition: all 0.3s ease;
-            margin: 0.5rem;
-        }
-
-        .btn-green {
-            background-color: #28a745;
-            color: white;
-            border: none;
-        }
-
-        .btn-green:hover {
-            background-color: #218838;
-        }
-
-        .btn-outline-green {
-            background-color: transparent;
-            color: #28a745;
-            border: 2px solid #28a745;
-        }
-
-        .btn-outline-green:hover {
-            background-color: #28a745;
-            color: white;
-        }
-
-        @keyframes fadeIn {
-            from {
-                opacity: 0;
-                transform: translateY(20px);
-            }
-            to {
-                opacity: 1;
-                transform: translateY(0);
-            }
-        }
-
-        @keyframes bounce {
-            0%, 20%, 50%, 80%, 100% {
-                transform: translateY(0);
-            }
-            40% {
-                transform: translateY(-20px);
-            }
-            60% {
-                transform: translateY(-10px);
-            }
-        }
-
-        /* Media Queries for mobile devices */
-        @media (max-width: 768px) {
-            h1 {
-                font-size: 3rem;
-                margin-bottom: 1.5rem;
-            }
-
-            .btn {
-                padding: 0.8rem 1.5rem;
-                font-size: 1rem;
-            }
-        }
-
-        /* Media Queries for very small mobile screens */
-        @media (max-width: 480px) {
-            h1 {
-                font-size: 2.5rem;
-                margin-bottom: 1rem;
-            }
-
-            .btn {
-                padding: 0.6rem 1rem;
-                font-size: 0.9rem;
-            }
-        }
-    </style>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" rel="stylesheet" />
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="container">
-        <h1>EH1OY</h1>
-        <div class="buttons">
-            <a href="/services/index.html" class="btn btn-green">Услуги</a>
-            <a href="https://t.me/eh1oy" class="btn btn-outline-green" target="_blank">Telegram канал</a>
+    <div class="my-root">
+        <aside class="my-sidebar">
+            <div class="my-logo">EH1OY</div>
+            <nav class="my-nav">
+                <a href="#home" class="my-nav-link active" data-section="home">Главная</a>
+                <a href="#services" class="my-nav-link" data-section="services">Услуги</a>
+                <a href="#leaks" class="my-nav-link" data-section="leaks">Сливы</a>
+                <a href="#about" class="my-nav-link" data-section="about">О нас</a>
+            </nav>
+        </aside>
+        <div class="my-main">
+            <header class="my-appbar">
+                <button class="menu-toggle" id="menu-toggle">
+                    <span class="material-symbols-outlined">menu</span>
+                </button>
+                <div class="my-appbar-title">Главная</div>
+            </header>
+            <main class="my-content">
+                <section id="home" class="my-section">
+                    <h1 class="main-title-eh1oy">EH1OY</h1>
+                </section>
+
+                <section id="services" class="my-section" style="display:none;">
+                    <div class="my-card">
+                        <h2 class="my-m3-order-title">Наши услуги</h2>
+                        <ul class="my-services-list">
+                            <li>Компиляция jni</li>
+                            <li>Компиляция Java</li>
+                            <li>Компиляция .pwn</li>
+                            <li>Заливка мода на сервер</li>
+                            <li>Сделать проект из ваших исходников</li>
+                            <li>Замена надписей в моде</li>
+                        </ul>
+                        <p class="my-free-notice">Все услуги предоставляются абсолютно бесплатно!</p>
+                        <div class="my-centered-btn-container">
+	                        <a href="https://t.me/eh1oy" target="_blank" class="my-btn my-m3-order-submit">
+	                            Заказать
+	                        </a>
+                        </div>
+                    </div>
+                </section>
+
+                <section id="leaks" class="my-section" style="display:none;">
+                     <div class="my-card">
+                        <h2 class="my-m3-order-title">Сливы</h2>
+                        <div id="leaks-container" class="my-leaks-grid">
+                            <!-- Карточки сливов будут загружаться сюда -->
+                        </div>
+                    </div>
+                </section>
+
+                <section id="about" class="my-section" style="display:none;">
+                    <div class="my-card my-support-card">
+                        <h2 class="my-support-title">О нас</h2>
+                        <p class="my-support-description">Вы можете связаться со мной в Telegram или посмотреть мои проекты на GitHub.</p>
+                        <div class="my-support-links">
+                            <a href="https://t.me/eh1oy" target="_blank" class="my-support-link">
+                                <span class="my-support-link-large-text">TELEGRAM</span>
+                            </a>
+                            <a href="https://github.com/eh1oy" target="_blank" class="my-support-link">
+                                 <span class="my-support-link-large-text">GITHUB</span>
+                            </a>
+                        </div>
+                    </div>
+                </section>
+            </main>
         </div>
     </div>
+    <script src="script.js"></script>
 </body>
-</html>
+</html> 
